--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         app:layout_constraintVertical_bias="0.002" />
 
     <Button
+        android:id="@+id/configuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Trocar idioma"
@@ -41,5 +42,6 @@
         app:layout_constraintVertical_bias="0.08">
 
     </Button>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
